--- a/03-stateful-application/containers/python/app/templates/index.html
+++ b/03-stateful-application/containers/python/app/templates/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Test PHP Application</title>
-
+    <title>Test Python Application</title>
 
     <link rel="shortcut icon" href="static/img/favicon.ico">
 <link rel="stylesheet" href="static/css/styles.css">
@@ -12,7 +11,7 @@
     <div class="demo-layout">
       <header class="header">
         <div class="">
-          <span class="header-text">Test PHP Application</span>
+          <span class="header-text">Test Python Application</span>
           <div class="mdl-layout-spacer"></div>
 
         </div>
